crates/forward-compatible-enum/tests/ui/malformed_where_clause.stderr
error: unexpected end of input, expected identifier
 --> tests/ui/malformed_where_clause.rs:4:10
  |
4 | #[derive(ForwardCompatibleEnum)]
  |          ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `ForwardCompatibleEnum` (in Nightly builds, run with -Z macro-backtrace for more info)
